2007-03-31  Neil Shi  <zeegeek@gmail.com>

	* imapprl.py (imap.get_mail): Fixed the bug of highlighting wrong
	messages if the new messages are not at the top.  Use a new data
	structure to store message entries.

2007-03-14  Neil Shi  <zeegeek@gmail.com>

	* popprl.py: Added POP3 support.  But it's not storing new
	messages' status correctly after rechecking.
	* imapprl.py (imap.check): Moved this function to private.
	* feedprl.py (feed.check): Deleted this function.

2007-02-19  Neil Shi  <zeegeek@gmail.com>

	* imapprl.py (imap.get_mail): fixed a bug which was introduced in
	previous release.  reverse() works in-place and always returns None.

2007-02-18  Neil Shi  <zeegeek@gmail.com>

	* feedprl.py (feed.get_mail): added XML feed support, including
	Gmail support.
